--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,24 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+}
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ['mancala/src/main/java', 'towerofhanoi/src/main/java']
+        }
+    }
+
+    test {
+        java {
+            srcDirs = ['mancala/src/test/java', 'towerofhanoi/src/test/java']
+        }
+    }
+}
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+}
